# cpp_multithreading_basics

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: VideoCapture.h  mutex_simple.h
src/: main.cpp  mutex_simple.cpp
